# ntt_python_ex

./: .gitignore  README.md
BigQuery_API/: README.md  pyproject.toml
Hello-World/: pyproject.toml
Hello_World/: README.md  pyproject.toml
Hello_World/hello_world/: hello.py
Matemathic_Function/: Diagram.drawio  README.md  pyproject.toml
Matemathic_Function/src/matemathic_function/: hello.py  is_triangle.py  main.py  math_function.py
Matemathic_Function/test/matemathic_function_tests/: hello_test.py  math_function_test.py  test_hello.py  test_is_triangle.py  test_main.py  test_math_function.py
Python_GCP_API/: README.md  pyproject.toml
Python_GCP_API/results/: result.csv
Python_GCP_API/src/python_gcp_api/: bigquery_api.py  main.py  set_google_credentials.py
Python_GCP_API/src/python_gcp_api/lib/: bigquery_api.py  gcs_api.py  pub_sub_api.py
Python_GCP_API/src/python_gcp_api/utils/: set_google_credentials.py
Python_GCP_API/test/test_python_gcp_api/: test_bigquery_api.py  test_gcs_api.py  test_pub_sub_api.py
