[tool.poetry]
name = "python-gcp-api"
version = "0.1.0"
description = ""
authors = ["GIORGIO PULCINI <giorgio.pulcini@alice.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
google-cloud-storage = "^2.16.0"
google-cloud-bigquery = "^3.20.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
